[package]
name = "scraped"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }

tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
scraper = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5"
lazy_static = "1.4"
url = "2.2"
url_serde = "0.2"
thiserror = "1"
color-eyre = "0.6.0"

[dev-dependencies]
claim = "0.5.0"
